# rust-playground

client-server/: Cargo.toml
client-server/src/: lib.rs
persistent-cli/: Cargo.toml
serde-display/: Cargo.toml
serde-display/src/: main.rs
