[package]
name = "client-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = {package = "serde_json_path_to_error", version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
